tests/js/valid/functions/closures.buri
@export
addN = (n) => (a) => a + n