tests/js/invalid/function/mismatched-types-0.buri
Func = (Int) => Int
func: Func = (a) => a
hello = func("hello")